--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
+    font-family: Verdana, Helvetica, sans-serif;
 }
 
 .mainDiv {
@@ -35,9 +36,52 @@ body {
 
 .planCost {
     display:flex;
+    width: 100%;
+    justify-content: space-between;
+    background-color: rgb(248, 248, 248);
+    border-radius: 10px;
+    height: 100px;
+}
+
+.planPic {
+    height: 60px;
+    width: 60px;
+    margin: 20px;
 }
 
 .processButtons {
     display: flex;
     flex-flow: column;
+}
+
+.planName {
+    font-size: 18px;
+    margin:0;
+}
+
+#changeButton {
+    background: none;
+    border: none;
+    color:rebeccapurple;
+    font-weight: bolder;
+    font-family: Verdana, Helvetica, sans-serif;
+    padding:15px;
+}
+
+#payButton {
+    background-color: rebeccapurple;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    height: 40px;
+    margin: 20px 0;
+    font-weight: bolder;
+    font-family: Verdana, Helvetica, sans-serif;
+}
+
+#cancelButton {
+    background: none;
+    border: none;
+    font-weight: bolder;
+    font-family: Verdana, Helvetica, sans-serif;
 }
